--- a/stylesheet/styled.css
+++ b/stylesheet/styled.css
@@ -1,6 +1,10 @@
 body {
     overflow-x : hidden ;
     margin:0; 
+    background-image: url("https://pixfeeds.com/images/animals/kangaroos/1280-155154437-jumping-red-kangaroo.jpg");
+    background-size: 100%;
+    background-position-y: 20%;
+    background-repeat: no-repeat;
     background-color : violet;
     padding : 10px 5px 10px 5px;
 }
