--- a/stylesheet/styled.css
+++ b/stylesheet/styled.css
@@ -13,8 +13,6 @@ body {
 
 
 .HEADER {
-    background-color : white;
-    color : #8a2be2;
     position : absolute ;
     width : 100% ;
     bottom : -100px ;
@@ -22,4 +20,9 @@ body {
 
 h6{
     font-size : 10px ;
+}
+
+p{
+    color : white;
+    background-color : black
 }
