--- a/stylesheet/styled.css
+++ b/stylesheet/styled.css
@@ -30,5 +30,21 @@ p{
 #souljaboi{
     width: 250px;
     position : fixed ;
-    right: 150px ;
+    right: 50px ;
+    bottom: 370px ;
+}
+
+p{
+    position : fixed ;
+}
+
+#lifehere{
+    position: fixed ;
+    right: 10px ;
+    top: 0px;
+}
+
+#deathhere{
+    position: fixed ;
+    top: 0px;
 }
